objects/SCA_Violations__c.object
<CustomObject>
    <description>Work: W-000026
Summary:This object stores SCA violations for a SCA Result.</description>
    <label>SCA Violation</label>
    <nameField>
        <displayFormat>SV-{0000000}</displayFormat>
        <label>SCA Violations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SCA Violations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Error_Description__c</fullName>
        <description>Work: W-000026
Summary:This field stores the Error Description of the file.</description>
        <label>Error Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <description>Work: W-000026
Summary:This field stores the Name of the file.</description>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <description>Work: W-000026
Summary:This field stores the Line number where the Violation occurred</description>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Work: W-000026
Summary:This field stores rule violation priority.</description>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rule_Set__c</fullName>
        <description>Work: W-000026
Summary:This field stores the Rule Set of the Violation</description>
        <label>Rule Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule__c</fullName>
        <description>Work: W-000026
Summary:This field stores the Rule Violation Name</description>
        <label>Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCA_Result__c</fullName>
        <label>SCA Result</label>
        <referenceTo>SCA_Result__c</referenceTo>
        <relationshipLabel>SCA Violations</relationshipLabel>
        <relationshipName>SCA_Violations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>